# LegalTech_AI

./: .env.example  .gitignore  ReadMe.md
backend/: .env.example  pyproject.toml
backend/api/: __init__.py  main.py  package_docker.py  pyproject.toml  rag_retrieval.py
backend/contract_analyst/: __init__.py  pyproject.toml  schemas.py  service.py  text_extract.py
backend/database/: pyproject.toml  reset_db.py  run_migrations.py  seed_data.py  verify_database.py
backend/database/migrations/: 001_schema.sql  002_legal_chats.sql
backend/database/src/: __init__.py  client.py  flow_log.py  models.py  schemas.py
backend/ingest/: cleanup_s3vectors.py  ingest_s3vectors.py  package.py  pyproject.toml  rag_core.py  rag_ingest_worker.py  search_s3vectors.py
backend/legaltech_backend/: __init__.py  config.py  logging_conf.py  main.py
backend/legaltech_backend/api/: __init__.py  deps.py  middleware.py
backend/legaltech_backend/api/routes/: contracts.py  documents.py  health.py  ingestion.py  ml.py  predictions.py  rag.py  research.py
backend/legaltech_backend/integrations/: __init__.py  llm.py  queue.py  storage.py  vector_store.py
backend/legaltech_backend/legal_agents/: __init__.py  agent.py  runner.py
backend/legaltech_backend/rag/: doc_chunk.py
backend/legaltech_backend/rag/knowledge-base/: Consumer Act.md  Federal Consumer Act.md  Food And Drugs Act.md  Labour Act.md  Nigeria Constitution 1999.md  Tenancy Disputes.md  Tenancy Law.md
backend/legaltech_backend/repositories/: __init__.py  document_repository.py  metadata_repository.py
backend/legaltech_backend/schemas/: common.py  contracts.py  documents.py  ingestion.py  predictions.py  research.py
backend/legaltech_backend/services/: __init__.py  contract_service.py  document_service.py  embeddings.py  ingestion_service.py  ml_model_service.py  prediction_service.py  rag_service.py  research_service.py
backend/legaltech_backend/tools/: __init__.py  complaint_generator.py  contract_analyzer.py  mcp_server.py  utils.py
backend/researcher/: context.py  deploy.py  flow_log.py  mcp_servers.py  research_evaluation.py  server.py  test_local.py  tools.py
backend/researcher/researcher/: context.py  mcp_servers.py
backend/tests/: conftest.py  test_api_lambda_handler.py  test_api_main.py  test_contract_analyst.py  test_database_client.py  test_database_schemas.py  test_flow_log.py  test_ingest_rag_core.py  test_ingest_rag_worker.py  test_ingest_s3vectors.py  test_rag_retrieval.py  test_rag_retrieval_extended.py  test_research_evaluation.py  test_researcher_context.py  test_researcher_tools_config.py  test_search_s3vectors.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
scripts/: deploy.py  destroy.py  run_local.py
terraform/: README.md
terraform/2_sagemaker/: .terraform.lock.hcl  main.tf  variables.tf
terraform/3_ingestion/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/4_researcher/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/5_database/: main.tf
terraform/6_agents/: main.tf  outputs.tf  variables.tf
(+30 files in other folders)
