[project]
name = "legaltech-backend"
version = "0.1.0"
description = "LegalTech AI — FastAPI service-layer backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "legal_comapanion-database",
    "boto3>=1.40.29",
    "langfuse>=3.3.4",
    "openai-agents>=0.3.0",
    "pydantic-ai>=1.0.6",
    "python-dotenv>=1.1.1",
    "api",
]

[tool.uv.workspace]
members = [
    "database",
    "api",
    "contract_analyst",
    "ingestion_worker",
]

[tool.uv.sources]
legal_comapanion-database = { workspace = true }
api = { workspace = true }

