[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "legal_comapanion-database",
    "boto3>=1.40.29",
    "contract-analyst",
    "fastapi>=0.116.1",
    "fastapi-clerk-auth>=0.0.7",
    "mangum>=0.19.0",
    "openai>=1.59.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.9",
    "python-jose>=3.5.0",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
legal_comapanion-database = { workspace = true }
contract-analyst = { workspace = true }
