[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contract-analyst"
version = "0.1.0"
description = "Contract analysis library (OpenAI structured output) — imported only by api.main; no public HTTP surface."
requires-python = ">=3.12"
dependencies = [
    "openai>=1.59.0",
    "pydantic>=2.11.7",
    "pypdf>=5.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["contract_analyst"]
